[256936] Support for Offline Mode https://bugs.eclipse.org/bugs/show_bug.cgi?id=256936